@@ -49,27 +49,27 @@
           <td><div style="border:solid"><button
             disabled id="buttonAbbrSlash">/</button><button
             disabled id="buttonAbbrColon">:</button></div></td>
-          <td><button disabled id="buttonAbbrPercentage">%</button></div></td>
+          <td><button disabled id="buttonAbbrPercentage">%</button></td>
         </tr>
       </table>
       <table>
         <tr>
-          <td><button disabled id="buttonAbbrPlus">+</button></div></td>
-          <td><button disabled id="buttonAbbrMinus">-</button></div></td>
+          <td><button disabled id="buttonAbbrPlus">+</button></td>
+          <td><button disabled id="buttonAbbrMinus">-</button></td>
         </tr>
       </table>
       <table>
-        <tr><td><button disabled id="buttonAbbrAmp">&amp;</button></div></td></tr>
+        <tr><td><button disabled id="buttonAbbrAmp">&amp;</button></td></tr>
       </table>
       <table>
         <tr><td><button disabled id="buttonAbbrPow">^</button></td></tr>
       </table>
       <table>
-        <tr><td><button disabled id="buttonAbbrVert">|</button></div></td></tr>
+        <tr><td><button disabled id="buttonAbbrVert">|</button></td></tr>
       </table>
       <table>
         <tr>
-          <td><button disabled id="buttonAbbrAssign">=</button></div></td>
+          <td><button disabled id="buttonAbbrAssign">=</button></td>
           <td id="textRightToLeft2"></td>
         </tr>
       </table>
@@ -149,7 +149,7 @@
               style="text-decoration:overline;">&frac12;</span></div></td>
           <td><div style="border:solid"><button
             disabled id="buttonAbbrEpsilon">&epsilon;</button><button
-            disabled id="buttonAbbrEPSILON">EPSILON</button></td>
+            disabled id="buttonAbbrEPSILON">EPSILON</button></div></td>
         </tr>
       </table>
       <table>
